[tool.poetry]
name = "eversql"
version = "0.1.0"
description = "A way of generating simple sql queries."
authors = ["Sengolda <YourName@Example.com>"]

[tool.poetry.dependencies]
python = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
